# CNN_SEI

./: .gitignore  CNN.ipynb  README.md  test_cnn.py
c/: CMakeLists.txt
c/src/: CMakeLists.txt  functions.c  functions.cpp  main.cpp
c/src/include/: cifar10_data.h  cifar10_normalized_data.h  coefs.h  functions.h  functions.hpp  parse.h  parse.hpp  virgule_fixe.hpp
catapult/: cifar10_normalized_data.h  coefs.h  conv1.cpp  conv1.hpp  flat_coefs.h  flat_image_data.h  functions.cpp  functions.hpp  testbench.cpp  testbench_conv1.cpp  testbench_convolution.cpp  testbench_global.cpp  testbench_maxpool.cpp
python/: cnn_final.ipynb  convert
python/tests/: CNN_functions.ipynb  parsebin.ipynb  parsetxt.ipynb  test_cnn.py
